--- a/.github/workflows/tesla-news.yml
+++ b/.github/workflows/tesla-news.yml
@@ -1,8 +1,12 @@
 name: Update Tesla News (daily)
 
+# GITHUB_TOKEN에 'contents: write' 권한을 명시 (커밋/푸시 위해 필요)
+permissions:
+  contents: write
+
 on:
   schedule:
-    # 매일 00:30 KST == 15:30 UTC
+    # 매일 00:30 KST = 15:30 UTC
     - cron: '30 15 * * *'
   workflow_dispatch:
 
@@ -12,6 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -22,10 +28,13 @@ jobs:
         run: npm i xml2js@0
 
       - name: Fetch RSS & build JSON
-        run: node scripts/fetchTeslaNews.js
+        run: node scripts/fetchTeslaNews.cjs
 
       - name: Commit & push if changed
         run: |
+          echo "Changed files:"
+          git status --porcelain || true
+
           if [ -n "$(git status --porcelain)" ]; then
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
